--- a/public/game.html
+++ b/public/game.html
@@ -114,8 +114,8 @@ body {
 const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"webgame","experimentalVK":false,"fileSizes":{"webgame.pck":80016,"webgame.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
-window.token = sessionStorage.getItem('supabase_access_token');
-window.user_id = sessionStorage.getItem('supabase_user_id');
+window.token = localStorage.getItem('access_token');
+window.user_id = localStorage.getItem('user_id');
 console.log("token:", window.token);
 console.log("user_id:", window.user_id);
 
